# OoT-Randomizer

./: .gitignore  Audiobank.py  Book1.xlsx  BoulderShuffle.py  Boulders.py  CI.py  Cargo.toml  Colors.py  Cosmetics.py  Cutscenes.py  Dungeon.py  Enemizer.py  EnemizerList.py  Entrance.py  EntranceShuffle.py  Fill.py  Goals.py  Gui.py  HintArea.py  HintList.py  Hints.py  Item.py  ItemList.py  ItemPool.py  Location.py  LocationList.py  MBSDIFFPatch.py  MQ.py  Main.py  Messages.py  Models.py  Music.py  MusicHelpers.py  OcarinaSongs.py  OoTRandomizer.py  Patches.py  Plandomizer.py  ProcessActors.py  README.md  Region.py  (+50 more)
.github/workflows/: python.yml
ASM/: Makefile  README.md  build.py  linker_script.ld  linkscript  ootSymbols.ld
ASM/c/: En_Blkobj.c  actor.c  actor.h  actor_table.h  agony.c  bg_check.c  bg_check.h  blue_warp.c  blue_warp.h  boss_ganon.c  chests.c  chests.h  collider_override.c  debug.c  debug.h  door_shutter.c  door_shutter.h  dpad.c  dpad.h  dungeon_info.c  dungeon_info.h  en_bb.c  en_bb.h  en_dns.c  en_dns.h  en_encount1.h  en_fd.c  en_gs.c  en_gs.h  en_ik.c  en_ik.h  en_ishi.c  en_item00.c  en_item00.h  en_kusa.c  en_kusa.h  en_kz.c  en_mb.c  en_mb.h  en_shopnuts.c  (+86 more)
ASM/src/: actor.asm  addresses.asm  bonk.asm  boot.asm  build.asm  bunny_hood.asm  chest_game.asm  chus_in_logic.asm  collider_override.asm  config.asm  coop_state.asm  cutscenes.asm  en_dns.asm  en_ik.asm  en_item00.asm  enemy_spawn_shuffle.asm  extended_objects.asm  fishing.asm  gerudo_guard.asm  grotto.asm  hacks.asm  init.asm  initial_save.asm  item_overrides.asm  mask_deequip.asm  menu.asm  messages.asm  minimap.asm  obj_mure3.asm  objects.asm  overlay.asm  ovl_arms_hook.asm  rainbow_bridge.asm
GUI/: package.json  package_release.json
Notes/: checks.csv  coop-ctx.md  extra-save-data.md  f3dzex2_disasm.py  flag_system.txt  grottos.txt  list_checks.py  scrubs.txt
Notes/GUI/: architecture.md  web-gui-testing.md
assets/: pre-commit.py
crate/rust-n64-test/: Cargo.toml
crate/rust-n64-test/assets/: build.py  mips-ultra64-cpu.json
crate/rust-n64-test/src/: lib.rs
data/: Bottom of the Well.json  LogicHelpers.json  Overworld.json  mqu.json  obj_silver_rock_standalone.zobj  obj_silver_rock_standalone.zobj.bak  presets_default.json  settings_mapping.json
data/Bingo/: bingo_goals.json
data/EnemizerWorld/: Bosses.json  Bottom of the Well.json  Deku Tree.json  Dodongos Cavern.json  Fire Temple.json  Forest Temple.json  Ganons Castle.json  Gerudo Training Ground.json  Ice Cavern.json  Jabu Jabus Belly MQ.json  Jabu Jabus Belly.json  Overworld.json  Shadow Temple MQ.json  Shadow Temple.json  Spirit Temple.json  Water Temple.json
data/Glitched World/: Deku Tree MQ.json  Deku Tree.json  Overworld.json  Shadow Temple.json
src/: entrance_shuffle.rs  hints.rs  lib.rs  main.rs  search.rs  version.rs
tests/: disables.sav  entrance-warps.sav  entrance.sav  entrance2.sav  entrance3.sav  glitched-standard.sav  glitched-tokens.sav  ludicrous.sav  mq.sav  multiworld.sav  nightforest.sav  plentiful.sav  tokensanity.sav  triforce-multiworld.sav  triforce-startingitems.sav  triforce.sav
(+322 files in other folders)
