[package]
name = "ootr"
version = "8.1.32-fenhl.3.riir.3"
edition = "2021"

[profile.release]
lto = true
strip = true

[lib]
name = "rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
collect-mac = "0.1"
futures = "0.3"
iced = { version = "0.4", features = ["pure", "tokio"] }
iced_native = "0.5"
itertools = "0.12"
lazy-regex = "3"
pyo3 = { version = "0.21", features = ["anyhow", "auto-initialize", "extension-module"] }
rand = "0.8"
rfd = "0.14"
semver = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
