[workspace]
members = [".", "crate/*"]
default-members = ["."]
resolver = "2"

[workspace.package]
version = "8.1.35-fenhl.1.riir.1"
edition = "2021"

[workspace.lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
lto = true
strip = true

[package]
name = "ootr"
version.workspace = true
edition.workspace = true

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
#unused_crate_dependencies = "deny" #TODO split binaries into separate crates
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[lib]
name = "rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
collect-mac = "0.1"
futures = "0.3"
iced = { version = "0.4", features = ["pure", "tokio"] }
iced_native = "0.5"
itertools = "0.12"
lazy-regex = "3"
pyo3 = { version = "0.21", features = ["anyhow", "auto-initialize", "extension-module"] }
rand = "0.8"
rfd = "0.14"
semver = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
