[package]
name = "rust-n64-test"
version.workspace = true
edition.workspace = true

[lints.rust]
rust_2018_idioms = "deny"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[lib]
crate-type = ["staticlib"]
